mock01/pv-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: logger
  name: logger
spec:
  volumes:
    - name: pv-volume
      persistentVolumeClaim:
        claimName: log-claim
  containers:
  - image: nginx:alpine
    name: logger
    resources: {}
    volumeMounts:
      - mountPath: "/var/www/nginx"
        name: pv-volume
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
